--- a/test/simple-tests.html
+++ b/test/simple-tests.html
@@ -1,10 +1,40 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, user-scalable=yes" />
+    <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
+    <script src="../../web-component-tester/browser.js"></script>
+    <link rel="import" href="../simple-search.html" />
 </head>
 <body>
+    <test-fixture id="simple-search">
+        <template>
+            <simple-search static-open></simple-search>
+        </template>
+    </test-fixture>
+    <script>
+        suite("simple-search static-open", function () {
+            var element;
+            setup(function () {
+                element = fixture("simple-search");
+            });
+            test("search area appearing in static open", function () {
+                assert.equal(element.isOpen, true);
+            });
+            test("search event triggered", function (done) {
+                element.addEventListener("search", function (e) {
+                    assert.equal(e.detail, "hello");
+                    done();
+                });
+                //these do not work with shadow dom, only with the shady dom
+                //element.querySelector("#searchInput").value = "hello";
+                //element.querySelector(".trigger-search paper-icon-button").click();
 
+                Polymer.dom(element.root).querySelector("#searchInput").value = "hello";
+                Polymer.dom(element.root).querySelector(".trigger-search paper-icon-button").click();
+            });
+        });
+    </script>
 </body>
 </html>
